@@ -1,3 +1,8 @@
+2009-04-06 Alexander Malysh <amalysh at kannel.org>
+    * gwlib/gwmem-check.c, gwlib/gwmem-native.c, gwlib/gwmem.h: applied patch
+      that adds gw_calloc function and speedup a gw_strdup.
+      Thanks to "Nikos Balkanas" <nbalkanas at gmail.com> for this patch.
+
 2009-04-03 Alexander Malysh <amalysh at kannel.org>
     * utils/mtbatch.c: applied patch that fixes #495.
       Thanks to Vincent CHAVANIS <v.chavanis at telemaque.fr> for this patch.
